--- a/app/templates/app/menu_cliente.html
+++ b/app/templates/app/menu_cliente.html
@@ -7,6 +7,6 @@
     <title>cliente</title>
 </head>
 <body>
-    <h2> Menu cliente </h2>
+    <h2> Menu cliente smdjnskdjskldjsakfh </h2>
 </body>
 </html>
